--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
   background: url(../images/bg-hero.png) no-repeat center #242424;
   background-size: cover;
   position: relative;
+  overflow: hidden;
 }
 
 .hero .container {
@@ -23,9 +24,10 @@
 }
 
 .hero-left h1 {
-  font-size: 100px;
+  font-size: 90px;
   color: #242424;
   margin-bottom: 10px;
+  line-height: 1.3;
 }
 
 .hero-left p {
@@ -40,7 +42,7 @@
   font-size: 20px;
   font-weight: 700;
   padding: 15px 25px;
-  color: #ec2633;
+  color:  #0096c7;
   cursor: pointer;
 }
 
@@ -146,7 +148,7 @@
 }
 
 .touch-card:nth-child(2) {
-  background: #ec2633;
+  background:  #0096c7;
 }
 
 .touch-card:nth-child(3) {
@@ -222,8 +224,5 @@
 
   .get-intouch-wrapper {
     grid-template-columns: repeat(1, 1fr);
-  }
-
-  .touch-card {
   }
 }
