--- a/styles/premium.css
+++ b/styles/premium.css
@@ -67,7 +67,7 @@
 }
 
 .premium-card-header h3{
- color: red;
+ color: 0096c7;
 }
 
 .premium-card-header p strong{
